[gd_scene load_steps=4 format=2]

[ext_resource path="res://Items/BatWing.png" type="Texture" id=1]
[ext_resource path="res://BatWing.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[node name="BatWing" type="RigidBody2D"]
z_index = 1
collision_layer = 0
collision_mask = 0
mode = 3
gravity_scale = 0.0
continuous_cd = 1
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="SeedShape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -1, -1, 1, -1, 1, 0, 0, 0, 0, 1, -1, 1 )

[node name="SeedCollision" type="Area2D" parent="."]
collision_layer = 2147483650
collision_mask = 2

[node name="SeedShape" type="CollisionPolygon2D" parent="SeedCollision"]
polygon = PoolVector2Array( -1, -1, 1, -1, 1, 0, 0, 0, 0, 1, -1, 1 )

[node name="Bump" type="Area2D" parent="."]
collision_layer = 2147483658
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bump"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Bump" to="." method="_on_Bump_area_entered"]
[connection signal="body_entered" from="Bump" to="." method="_on_Bump_body_entered"]
